--- a/package.json
+++ b/package.json
@@ -27,10 +27,8 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.3",
-    "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -43,7 +41,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "expo-splash-screen": "~0.29.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
