--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@react-navigation/stack": "^7.0.17",
     "expo": "~52.0.4",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.2",
@@ -27,6 +29,7 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.3",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-web-browser": "~14.0.0",
@@ -37,12 +40,12 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "tailwindcss": "^3.4.14",
-    "expo-splash-screen": "~0.29.13"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
